<resources>
    <string name="app_name">project demo 4</string>
    <string name="todo">TODO</string>
    <string name="API_key">AIzaSyDBeohVdoyFTmYzEDrryUKLDxMXsfumQUI</string>
    <string name="kinh">Lng</string>
    <string name="vi">Lat</string>
    <string name="save">Save</string>
    <string name="go">GO</string>
    <string name="clear">DELETE</string>
    <string name="dialog">dialog</string>
</resources>
